--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -1,4 +1,13 @@
 /* You can add global styles to this file, and also import other style files */
 html {
-    background-color: #e9f0f3 !important;
+  background-color: #e9f0f3 !important;
+}
+html,
+body {
+  height: 100%;
+}
+body {
+  margin: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+  background-color: #e9f0f3 !important;
 }
